force-app/main/default/objects/Telephone_Internet__c/Telephone_Internet__c.object-meta.xml
<CustomObject>
    <label>Telephone &amp; Internet</label>
    <nameField>
        <label>Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Telephone &amp; Internet</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>