force-app/main/default/objects/Telephone_Internet__c/fields/Aircall__c.field-meta.xml
<CustomField>
    <fullName>Aircall__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>TRUE if the number is connected to an Aircall number</inlineHelpText>
    <label>Aircall</label>
    <type>Checkbox</type>
</CustomField>