force-app/main/default/objects/Telephone_Internet__c/fields/Aircall_Number__c.field-meta.xml
<CustomField>
    <fullName>Aircall_Number__c</fullName>
    <label>Aircall Number</label>
    <type>Phone</type>
</CustomField>