force-app/main/default/objects/Telephone_Internet__c/fields/Cost_Centre__c.field-meta.xml
<CustomField>
    <fullName>Cost_Centre__c</fullName>
    <inlineHelpText>If known</inlineHelpText>
    <label>Cost Centre</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Service_Provider__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BR QLD/NT SERVICES PTY LTD</fullName>
            </value>
            <value>
                <fullName>BR VIC/TAS SERVICES PTY LTD</fullName>
            </value>
            <value>
                <fullName>BR NSW/ACT SERVICES PTY LTD</fullName>
            </value>
            <value>
                <fullName>BR SA/WA SERVICES PTY LTD</fullName>
            </value>
            <value>
                <fullName>BETTER REHABILITATION PTY. LTD.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>