force-app/main/default/objects/Telephone_Internet__c/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <formula>User__r.Department</formula>
    <label>Department</label>
    <type>Text</type>
</CustomField>