force-app/main/default/objects/Telephone_Internet__c/fields/Inter__c.field-meta.xml
<CustomField>
    <fullName>Inter__c</fullName>
    <label>Internet Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NBN</fullName>
            </value>
            <value>
                <fullName>ADSL</fullName>
            </value>
            <value>
                <fullName>4G</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>