force-app/main/default/objects/Telephone_Internet__c/fields/Invoice__c.field-meta.xml
<CustomField>
    <fullName>Invoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invoice</label>
    <referenceTo>Invoices__c</referenceTo>
    <relationshipLabel>Telephone &amp; Internet</relationshipLabel>
    <relationshipName>Telephone_Internet</relationshipName>
    <type>Lookup</type>
</CustomField>