force-app/main/default/objects/Telephone_Internet__c/fields/IT_Asset__c.field-meta.xml
<CustomField>
    <fullName>IT_Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Modem</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>IT_Asset__c.Equipment_Type__c</field>
            <operation>equals</operation>
            <value>4G Dongle</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>IT_Asset__c</referenceTo>
    <relationshipLabel>Telephone &amp; Internet</relationshipLabel>
    <relationshipName>Telephone_Internet</relationshipName>
    <type>Lookup</type>
</CustomField>