force-app/main/default/objects/Telephone_Internet__c/fields/Job_Title__c.field-meta.xml
<CustomField>
    <fullName>Job_Title__c</fullName>
    <formula>User__r.Title</formula>
    <label>Job Title</label>
    <type>Text</type>
</CustomField>