force-app/main/default/objects/Telephone_Internet__c/fields/Office__c.field-meta.xml
<CustomField>
    <fullName>Office__c</fullName>
    <formula>TEXT(User__r.Site__c)</formula>
    <label>Office</label>
    <type>Text</type>
</CustomField>