force-app/main/default/objects/Telephone_Internet__c/fields/Plan_Details__c.field-meta.xml
<CustomField>
    <fullName>Plan_Details__c</fullName>
    <label>Plan Details</label>
    <type>TextArea</type>
</CustomField>