force-app/main/default/objects/Telephone_Internet__c/fields/Plan_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Plan_End_Date__c</fullName>
    <description>End Date if it has a contract attached. Leave empty if no lock-in contract</description>
    <label>Plan End Date</label>
    <type>Date</type>
</CustomField>