force-app/main/default/objects/Telephone_Internet__c/fields/Plan_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Plan_Start_Date__c</fullName>
    <description>Start Date of the plan</description>
    <label>Plan Start Date</label>
    <type>Date</type>
</CustomField>