force-app/main/default/objects/Telephone_Internet__c/fields/Plan_Type__c.field-meta.xml
<CustomField>
    <fullName>Plan_Type__c</fullName>
    <label>Plan Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Data and Voice</fullName>
            </value>
            <value>
                <fullName>Data only</fullName>
            </value>
            <value>
                <fullName>Voice only</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>