force-app/main/default/objects/Telephone_Internet__c/fields/Service_Provider__c.field-meta.xml
<CustomField>
    <fullName>Service_Provider__c</fullName>
    <label>Service Provider</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Optus</fullName>
            </value>
            <value>
                <fullName>Telstra</fullName>
            </value>
            <value>
                <fullName>TPG</fullName>
            </value>
            <value>
                <fullName>Vodafone</fullName>
            </value>
            <value>
                <fullName>Pear</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>BGP</fullName>
            </value>
            <value>
                <fullName>BPG</fullName>
                <isActive>false</isActive>
                <label>BPG</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>