force-app/main/default/objects/Telephone_Internet__c/fields/Site__c.field-meta.xml
<CustomField>
    <fullName>Site__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Site</label>
    <referenceTo>enrtcr__Site__c</referenceTo>
    <relationshipLabel>Telephone &amp; Internet</relationshipLabel>
    <relationshipName>Telephone_Internet</relationshipName>
    <type>Lookup</type>
</CustomField>