force-app/main/default/objects/Telephone_Internet__c/fields/Speed__c.field-meta.xml
<CustomField>
    <fullName>Speed__c</fullName>
    <label>Speed</label>
    <length>20</length>
    <type>Text</type>
</CustomField>