force-app/main/default/objects/Telephone_Internet__c/recordTypes/Internet.recordType-meta.xml
<RecordType>
    <fullName>Internet</fullName>
    <active>true</active>
    <label>Internet</label>
</RecordType>