force-app/main/default/objects/Telephone_Internet__c/listViews/Aircall_Numbers.listView-meta.xml
<ListView>
    <fullName>Aircall_Numbers</fullName>
    <columns>NAME</columns>
    <columns>User__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Telephone_Internet__c.Phone</value>
    </filters>
    <filters>
        <field>Aircall__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Aircall Numbers</label>
</ListView>