force-app/main/default/objects/Telephone_Internet__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>User__c</columns>
    <columns>Aircall__c</columns>
    <columns>Job_Title__c</columns>
    <columns>Plan_Name__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Telephone_Internet__c.Phone</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <label>All (Phone)</label>
</ListView>