force-app/main/default/objects/Telephone_Internet__c/listViews/All_Internet.listView-meta.xml
<ListView>
    <fullName>All_Internet</fullName>
    <columns>NAME</columns>
    <columns>Site__c</columns>
    <columns>Inter__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Telephone_Internet__c.Internet</value>
    </filters>
    <filters>
        <field>Service_Provider__c</field>
        <operation>equals</operation>
        <value>Telstra</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <label>All (Internet)</label>
</ListView>