force-app/main/default/objects/Telephone_Internet__c/listViews/All_Phone_Assigned.listView-meta.xml
<ListView>
    <fullName>All_Phone_Assigned</fullName>
    <columns>NAME</columns>
    <columns>User__c</columns>
    <columns>Aircall__c</columns>
    <columns>Job_Title__c</columns>
    <columns>Plan_Name__c</columns>
    <columns>Plan_Details__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>User__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>All (Phone) Assigned</label>
</ListView>