force-app/main/default/objects/Telephone_Internet__c/listViews/Inactive_Numbers.listView-meta.xml
<ListView>
    <fullName>Inactive_Numbers</fullName>
    <columns>NAME</columns>
    <columns>User__c</columns>
    <columns>Office__c</columns>
    <columns>Cost_Centre__c</columns>
    <columns>Job_Title__c</columns>
    <columns>Department__c</columns>
    <columns>Aircall__c</columns>
    <columns>Service_Provider__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>User_Active__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Telephone_Internet__c.Phone</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <label>Inactive Numbers</label>
</ListView>